[IMP] pms-api-rest: demo data for property image hotel, icon room type classes, views, init, manifest &  services & datamodels (property, user, room_type_class, agency, sale channels)

--- a/pms_api_rest/views/pms_property_views.xml
+++ b/pms_api_rest/views/pms_property_views.xml
@@ -4,6 +4,11 @@
         <field name="model">pms.property</field>
         <field name="inherit_id" ref="pms.pms_property_views_form" />
         <field name="arch" type="xml">
+            <xpath expr="//page[@name='property_general']//field[@name='street']" position="before">
+                <group>
+                    <field name="hotel_image_pms_api_rest" widget="image" class="oe_avatar"/>
+                </group>
+            </xpath>
             <xpath expr="//field[@name='default_departure_hour']" position="after">
                 <group string="Planning Colors">
                     <field name="color_option_config" />
