[FIX] pms_w_s: prefix routes to avoid conflict
Using route `/rooms` conflict with other pms modules.

Now routes for booking online are prefixed `/ebooking`.

--- a/pms_website_sale/templates/pms_address_templates.xml
+++ b/pms_website_sale/templates/pms_address_templates.xml
@@ -12,7 +12,7 @@
                         <form
                             name="address_form"
                             method="POST"
-                            action="/booking/address"
+                            action="/ebooking/booking/address"
                             autocomplete="on"
                         >
                             <input
