--- a/pms_website_sale/templates/pms_booking_engine_templates.xml
+++ b/pms_website_sale/templates/pms_booking_engine_templates.xml
@@ -20,7 +20,10 @@
                         </t>
                         <div class="row justify-content-end">
                             <div class="col-auto">
-                                <a class="btn btn-primary" href="/booking/address">Next
+                                <a
+                                    class="btn btn-primary"
+                                    href="/ebooking/booking/address"
+                                >Next
                                 </a>
                             </div>
                         </div>
