--- a/pms_website_sale/templates/pms_booking_payment_templates.xml
+++ b/pms_website_sale/templates/pms_booking_payment_templates.xml
@@ -17,7 +17,7 @@
                                 <t t-call="pms_website_sale.pms_booking_engine_table">
                                     <t
                                         t-set="availability_results"
-                                        t-value="booking_engine.availability_results"
+                                        t-value="booking_engine.availability_results.filtered(lambda r: r.value_num_rooms_selected > 0)"
                                     />
                                 </t>
                             </div>
@@ -38,24 +38,6 @@
                 </div>
             </div>
         </t>
-    </template>
-
-    <template id="partner_summary">
-        <div class="row">
-            <div class="col col-10">
-                <h3>Contact</h3>
-                <span
-                    t-field="booking_engine.partner_id"
-                    t-options='{"widget": "contact", "fields": ["name", "address", "phone", "email"], "no_marker": True, "phone_icons": True}'
-                    name="purchase_shipping_address"
-                />
-            </div>
-            <div class="col col-2 text-right">
-                <a href="/ebooking/booking/address">
-                    <button class="btn btn-light ">Edit</button>
-                </a>
-            </div>
-        </div>
     </template>
 
     <template id="payment_acquirer_selection">
